--- a/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/About.form
+++ b/timekeeperlight/src/java/com/davidecavestro/timekeeper/gui/About.form
@@ -14,6 +14,7 @@
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_generateMnemonicsCode" type="java.lang.Boolean" value="false"/>
+    <AuxValue name="FormSettings_layoutCodeTarget" type="java.lang.Integer" value="2"/>
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
@@ -24,6 +25,9 @@
   <SubComponents>
     <Container class="javax.swing.JTabbedPane" name="jTabbedPane1">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Dialog" size="12" style="0"/>
+        </Property>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="null"/>
         </Property>
@@ -361,11 +365,14 @@
                         <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
                           <ComponentRef name="buttonGroup1"/>
                         </Property>
+                        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                          <Font name="Dialog" size="12" style="0"/>
+                        </Property>
                         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
                           <ResourceString bundle="com/davidecavestro/timekeeper/gui/res.properties" key="Application" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameDots}&quot;).getString(&quot;{key}&quot;)"/>
                         </Property>
                         <Property name="toolTipText" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-                          <ResourceString bundle="com/davidecavestro/timekeeper/gui/res.properties" key="Host_env_button_tooltip" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameDots}&quot;).getString(&quot;{key}&quot;)"/>
+                          <ResourceString bundle="com/davidecavestro/timekeeper/gui/res.properties" key="About/System/HostButton/tooltip" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameDots}&quot;).getString(&quot;{key}&quot;)"/>
                         </Property>
                       </Properties>
                       <Events>
@@ -375,12 +382,14 @@
                         <AuxValue name="generateMnemonicsCode" type="java.lang.Boolean" value="true"/>
                       </AuxValues>
                     </Component>
-                    <Component class="javax.swing.JToggleButton" name="jToggleButton1">
+                    <Component class="javax.swing.JToggleButton" name="javaToggleButton">
                       <Properties>
                         <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
                           <ComponentRef name="buttonGroup1"/>
                         </Property>
-                        <Property name="selected" type="boolean" value="true"/>
+                        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                          <Font name="Dialog" size="12" style="0"/>
+                        </Property>
                         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
                           <ResourceString bundle="com/davidecavestro/timekeeper/gui/res.properties" key="Java" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameDots}&quot;).getString(&quot;{key}&quot;)"/>
                         </Property>
@@ -389,7 +398,7 @@
                         </Property>
                       </Properties>
                       <Events>
-                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jToggleButton1ActionPerformed"/>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="javaToggleButtonActionPerformed"/>
                       </Events>
                       <AuxValues>
                         <AuxValue name="generateMnemonicsCode" type="java.lang.Boolean" value="true"/>
@@ -399,6 +408,9 @@
                       <Properties>
                         <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
                           <ComponentRef name="buttonGroup1"/>
+                        </Property>
+                        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                          <Font name="Dialog" size="12" style="0"/>
                         </Property>
                         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
                           <ResourceString bundle="com/davidecavestro/timekeeper/gui/res.properties" key="Host" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameDots}&quot;).getString(&quot;{key}&quot;)"/>
@@ -450,20 +462,11 @@
                         <Component class="javax.swing.JTable" name="systemPropsTable">
                           <Properties>
                             <Property name="cellSelectionEnabled" type="boolean" value="true"/>
-                            <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                              <Dimension value="null"/>
-                            </Property>
-                            <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                              <Dimension value="null"/>
-                            </Property>
-                            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                              <Dimension value="null"/>
-                            </Property>
                           </Properties>
                           <AuxValues>
-                            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JXTable (systemPropertiesTableModel);"/>
-                            <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="systemPropsTable.setDefaultRenderer (String.class, new DefaultTableCellRenderer () {&#xa;        public Component getTableCellRendererComponent(JTable table, Object value,&#xa;            boolean isSelected, boolean hasFocus, int row, int column) {&#xa;&#xa;            final JLabel label = (JLabel)super.getTableCellRendererComponent (table, value, isSelected, hasFocus, row, column);&#xa;            if (0 != column) {&#xa;                /* colonna chiavi */&#xa;&#x9;&#x9;&#x9;&#x9;label.setFont (keysFont);&#xa;            }&#xa;            return label;&#xa;        }&#xa;&#xa;    });"/>
-                            <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="final Font keysFont = new Font(&quot;monospaced&quot;, Font.PLAIN, 12);"/>
+                            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JXTable (proxyTableModel);"/>
+                            <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="systemPropsTable.setDefaultRenderer (String.class, new DefaultTableCellRenderer () {&#xa;        public Component getTableCellRendererComponent(JTable table, Object value,&#xa;            boolean isSelected, boolean hasFocus, int row, int column) {&#xa;&#xa;            final JLabel label = (JLabel)super.getTableCellRendererComponent (table, value, isSelected, hasFocus, row, column);&#xa;            if (0 != column) {&#xa;                /* colonna valori */&#xa;&#x9;&#x9;&#x9;&#x9;label.setFont (valuesFont);&#xa;            }&#xa;            return label;&#xa;        }&#xa;&#xa;    });&#xa;"/>
+                            <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="final Font valuesFont = new Font(&quot;monospaced&quot;, Font.PLAIN, 12);"/>
                           </AuxValues>
                         </Component>
                       </SubComponents>
